<resources>
    <string name="app_name">HungryPeople</string>
    <string name="action_settings">Settings</string>


    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">VIEW DETAILS</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone">"Phone"</string>
    <string name="user_name">Username:</string>
    <string name="first_name">"Firstname: " </string>
    <string name="last_name">"Lastname: "</string>
    <string name="phonenumber">"Phone Number: "</string>
    <string name="emailaddress">"Email: "</string>
    <string name="homeaddress">"Address: "</string>
    <string name="your_past_orders">"Your Past Orders"</string>
    <string name="Restaurant">RESTAURANT</string>
    <string name="business_name">Business Name</string>
    <string name="business_id">Business ID</string>
    <string name="Menu">Menu</string>


</resources>
