<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/business_name"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/business_name"
            android:textAlignment="center"
            android:textSize="16dp"
            android:paddingTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/business_id"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/business_id"
            android:textAlignment="center"
            android:textSize="16dp"
            android:paddingTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/phonenumber"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/business_phoneNumber"
            android:textAlignment="center"
            android:textSize="16dp"
            android:paddingTop="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Menu"
        android:textSize="20sp"
        android:paddingTop="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_business"
        />

</LinearLayout>