<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_id_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/content_id"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/head_image" />

    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/content_avatar_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/Restaurant" />

            <ImageView
                android:id="@+id/content_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_avatar_title"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/content_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/content_avatar"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/content_avatar"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/content_rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/content_name"
                android:layout_below="@id/content_name"
                android:src="@drawable/stars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/content_rating_stars"
                android:layout_marginBottom="-2dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/content_rating_stars"
                android:text="@string/rating_mock"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp" />


        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp">

                <TextView
                    android:id="@+id/content_menu1"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_badge"
                    android:textColor="@color/mainTextColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="10dp"
                    android:src="@drawable/ic_add_24px"
                    android:id="@+id/add_menu1"
                    android:layout_gravity="right"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_menu2"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_badge"
                    android:textColor="@color/mainTextColor"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="10dp"
                    android:src="@drawable/ic_add_24px"
                    android:id="@+id/add_menu2"
                    android:layout_gravity="right"
                    />


            </LinearLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp">

                <TextView
                    android:id="@+id/content_menu3"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_badge"
                    android:textColor="@color/mainTextColor"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="10dp"
                    android:src="@drawable/ic_add_24px"
                    android:id="@+id/add_menu3"
                    android:layout_gravity="right"
                    />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/content_menu4"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="10dp"
                android:src="@drawable/ic_add_24px"
                android:id="@+id/add_menu4"
                android:layout_gravity="right"
                />


        </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- request button -->
        <Button
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>